--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,7 @@ jobs:
         
       # run tests!
       - run: mvn integration-test
+
+notify:
+  webhooks:
+    - url: http://phabricator.crearts.xyz/harbormaster/hook/circleci/
