--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.password = 1234
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.data.rest.base-path=api
