--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,14 @@ jobs:
       # run tests!
       - run: mvn integration-test
 
+      - run: mvn package
+
+      - store_test_results:
+          path: target/surefire-reports
+
+      - store_artifacts:
+          path: target/money-0.0.1-SNAPSHOT.jar
+
 notify:
   webhooks:
     - url: http://phabricator.crearts.xyz/harbormaster/hook/circleci/
