--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
 version: 2
+
 jobs:
   build:
     docker:
@@ -47,6 +48,34 @@ jobs:
 
       - store_artifacts:
           path: target/money-0.0.1-SNAPSHOT.jar
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            target
+
+  deploy:
+    machine:
+      enabled: true
+    working_directory: ~/repo
+    steps:
+      - checkout
+
+      - attach_workspace:
+          at: ~/repo
+
+      - run: scp -r target/*.jar $DEPLOY_USER@$VDS:/home/$DEPLOY_USER/deploy
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
 
 notify:
   webhooks:
