--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
 server.address=127.0.0.1
-server.port=8080
+server.port=7000
 
 spring.profiles.active=default
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/money?useUnicode=true&characterEncoding=UTF-8&useSSL=false&requireSSL=false
-spring.datasource.username = root
-spring.datasource.password = 1234
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:3306/money?useUnicode=true&characterEncoding=UTF-8&useSSL=false&requireSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = 1234
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
