--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.data.rest.base-path=api
+
+config.defaultCurrency = VND
+config.openexchangeratesKey = 8c4a6b80722a4ff3bf0f325574cf93c2
