--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.21.0</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
         </plugins>
     </reporting>
 
@@ -153,6 +159,12 @@
                 <configuration>
                     <executable>true</executable>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.3</version>
             </plugin>
 
             <plugin>
