--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=7001
 
 spring.profiles.active=default
 
+spring.config.location=file:/etc/money/application.properties
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url = jdbc:mysql://localhost:3306/money?useUnicode=true&characterEncoding=UTF-8&useSSL=false&requireSSL=false
