--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       # run tests!
       - run: mvn test
 
-      - run: mvn package -Dspring.profiles.active=mysql
+      - run: mvn package -Dspring.profiles.active=mysql -DskipTests=true
 
       - store_test_results:
           path: target/surefire-reports
