--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,16 +46,16 @@ jobs:
       - store_test_results:
           path: target/surefire-reports
 
-      - run:
-          name: codeconv.io
-          command: bash <(curl -s https://codecov.io/bash)
-
       - store_artifacts:
           path: target/money-0.0.1-SNAPSHOT.jar
       - persist_to_workspace:
           root: ~/repo
           paths:
             target
+
+      - run:
+          name: codeconv.io
+          command: bash <(curl -s https://codecov.io/bash) -X gcov
 
   deploy:
     machine:
