--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,12 +39,16 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn clean cobertura:cobertura
+      - run: mvn test cobertura:cobertura
 
-      - run: mvn package -Dspring.profiles.active=mysql -DskipTests=true
+      - run:
+          name: codeconv.io
+          command: bash <(curl -s https://codecov.io/bash)
 
       - store_test_results:
           path: target/surefire-reports
+
+      - run: mvn package -Dspring.profiles.active=mysql -DskipTests=true
 
       - store_artifacts:
           path: target/money-0.0.1-SNAPSHOT.jar
@@ -52,10 +56,6 @@ jobs:
           root: ~/repo
           paths:
             target
-
-      - run:
-          name: codeconv.io
-          command: bash <(curl -s https://codecov.io/bash)
 
   deploy:
     machine:
