--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,7 @@
                 <configuration>
                     <formats>
                         <format>xml</format>
+                        <format>html</format>
                     </formats>
                     <check/>
                 </configuration>
