--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.rb linguist-language=Java
+src/main/resources/static/* linguist-vendored
+src/main/resources/templates/* linguist-vendored
+*.java linguist-language=Java
