--- a/pom.xml
+++ b/pom.xml
@@ -214,8 +214,15 @@
                         <format>xml</format>
                         <format>html</format>
                     </formats>
-                    <check/>
+                    <check />
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>5.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
