--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,15 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.sf.beanrunner/beanrunner -->
+        <dependency>
+            <groupId>net.sf.beanrunner</groupId>
+            <artifactId>beanrunner</artifactId>
+            <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
         <!--
         <dependency>
             <groupId>org.springframework.security</groupId>
