--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 config.defaultCurrency = VND
 config.openexchangeratesKey = 8c4a6b80722a4ff3bf0f325574cf93c2
+
+spring.mail.host=localhost
+spring.mail.port=1025
