--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.data.rest.base-path=api
 config.defaultCurrency = VND
 config.openexchangeratesKey = 8c4a6b80722a4ff3bf0f325574cf93c2
 
+spring.jpa.hibernate.ddl-auto = none
+
 
 
 
