--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -13,11 +13,11 @@ services:
       MYSQL_PASSWORD: 1234
       MYSQL_ROOT_PASSWORD: 1234
 
-  postgres:
-    image: postgres:latest
-    ports:
-    - "5432:5432"
-    environment:
-      POSTGRES_DB: money
-      POSTGRES_USER: darvik
-      POSTGRES_PASSWORD: 1234
+#  postgres:
+#    image: postgres:latest
+#    ports:
+#    - "5432:5432"
+#    environment:
+#      POSTGRES_DB: money
+#      POSTGRES_USER: darvik
+#      POSTGRES_PASSWORD: 1234
