--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ config.openexchangeratesKey = 8c4a6b80722a4ff3bf0f325574cf93c2
 
 spring.jpa.hibernate.ddl-auto = none
 
+spring.messages.basename=messages/messages
 
 
 
