--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 server.port=7001
-
+# active profiles
 spring.profiles.active=mysql
-
 spring.data.rest.base-path=api
 
 config.defaultCurrency = VND
